# cmake_practice

./: .gitignore  README.md
practice_five/library_project/: CMakeLists.txt
practice_five/library_project/lib/: CMakeLists.txt
practice_five/main_project/: CMakeLists.txt
practice_five/main_project/cmake/: FindHELLO.cmake
practice_five/main_project/src/: CMakeLists.txt  main.cpp
practice_four/: CMakeLists.txt  README.md
practice_four/lib/: CMakeLists.txt  hello.h  libhello.so.1.2
practice_four/src/: CMakeLists.txt  main.c
practice_one/: CMakeLists.txt  main.cpp
practice_three/: CMakeLists.txt
practice_three/install/lib/: libhello.so.1.2
practice_three/lib/: CMakeLists.txt
practice_two/: CMakeLists.txt
practice_two/share/doc/cmake/practice_two/: README.md
practice_two/src/: main.cpp
